--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "generic-react-app3",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@derhuerst/query-overpass": "^2.0.0",
     "@react-leaflet/core": "1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/express": "^4.17.13",
+    "@types/node-fetch": "^2.5.11",
+    "@types/pg": "^8.6.1",
+    "@types/square-connect": "^4.20201028.1",
+    "concurrently": "^6.2.0",
+    "express": "^4.17.1",
     "leaflet": "1.7.1",
+    "node-fetch": "^2.6.1",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "3.1.0",
@@ -19,7 +29,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"node server.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
