--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@derhuerst/query-overpass": "^2.0.0",
+    "@fontsource/roboto": "^4.5.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@mui-treasury/layout": "^4.5.0",
+    "@mui-treasury/styles": "^1.13.1",
     "@react-leaflet/core": "1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -12,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/leaflet": "^1.7.4",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^16.3.1",
     "@types/node-fetch": "^2.5.11",
     "@types/pg": "^8.6.1",
