--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "scripts": {
     "start": "concurrently \"node server.js\" \"react-scripts start\"",
+    "start-frontend": "react-scripts start",
+    "start-backend": "node server.js",
     "build": "react-scripts build && npm run build-api",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
