change to @square/web-sdk from deprecated SqPaymentForm; fix bugs in backend

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui-treasury/layout": "^4.5.0",
     "@mui-treasury/styles": "^1.13.1",
     "@react-leaflet/core": "1.0.2",
+    "@square/web-sdk": "^2.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -37,6 +38,7 @@
     "react-native-square-in-app-payments": "^1.5.0",
     "react-scripts": "4.0.3",
     "react-square-payment-form": "^0.7.2",
+    "react-square-web-payments-sdk": "^1.5.1",
     "square": "^12.0.0",
     "square-connect": "^6.20201216.0",
     "type": "^1.2.0",
