--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui-treasury/layout": "^4.5.0",
     "@mui-treasury/styles": "^1.13.1",
     "@react-leaflet/core": "1.0.2",
