--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "plaque-order-page",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": {
+    "/api": {
+      "target": "https://localhost:8080",
+      "secure": false
+    }
+  },
   "type": "module",
   "dependencies": {
     "@derhuerst/query-overpass": "^2.0.0",
