--- a/package.json
+++ b/package.json
@@ -72,9 +72,11 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "heroku": "^7.56.1",
+    "heroku-cli": "^7.0.9"
   },
   "engines": {
-    "node": "16.15.0"
+    "node": "16.5.0"
   }
 }
