--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "leaflet": "1.7.1",
     "node-fetch": "^2.6.1",
     "node-postgres": "^0.6.2",
+    "overpass-ts": "^4.2.4",
     "pg": "^8.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
