--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/material-ui": "^0.21.9",
     "@types/node": "^16.3.1",
     "@types/node-fetch": "^2.5.11",
+    "@types/node-schedule": "^1.3.2",
     "@types/pg": "^8.6.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
@@ -31,6 +32,7 @@
     "leaflet": "1.7.1",
     "node-fetch": "^2.6.1",
     "node-postgres": "^0.6.2",
+    "node-schedule": "^2.0.0",
     "overpass-ts": "^4.2.4",
     "pg": "^8.6.0",
     "react": "^17.0.1",
@@ -52,7 +54,8 @@
     "build": "react-scripts build && npm run build-api",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-api": "tsc -p tsconfig-api.json"
+    "build-api": "tsc -p tsconfig-api.json",
+    "scheduler": "node --es-module-specifier-resolution=node schedule.js"
   },
   "eslintConfig": {
     "extends": [
