update tsconfig for heroku job scheduling

--- a/tsconfig-api.json
+++ b/tsconfig-api.json
@@ -70,5 +70,5 @@
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["./api"],
-  "files": ["server.ts"]
+  "files": ["server.ts","schedule.ts","worker.ts"]
 }
