--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/square-connect": "^4.20201028.1",
+    "bootstrap": "^5.1.0",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "leaflet": "1.7.1",
@@ -41,7 +42,6 @@
     "pg": "^8.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-ladda": "^6.0.0",
     "react-ladda-button": "^1.0.3",
     "react-leaflet": "3.1.0",
     "react-scripts": "4.0.3",
