--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/square-connect": "^4.20201028.1",
     "bootstrap": "^5.1.0",
+    "bree": "^9.1.2",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "leaflet": "1.7.1",
@@ -56,8 +57,8 @@
   "scripts": {
     "newstart": "if [ ${NODE_ENV} = \"test\" ]; then npm run start-backend && npm run start-frontend; else npm run start-frontend; fi",
     "start": "if [ ${NODE_ENV} = \"test\" ]; then concurrently \"npm run start-backend\" \"npm run start-frontend\"; else npm run start-frontend; fi",
-    "start-frontend": "if [ ${NODE_ENV} = \"production\" ]; then node --es-module-specifier-resolution=node server.js;  else react-scripts start; fi",
-    "start-backend": "npm run build && if [ ${NODE_ENV} = \"production\" ]; then npm run start-frontend; else node --es-module-specifier-resolution=node server.js; fi",
+    "start-frontend": "if [ ${NODE_ENV} = \"production\" ]; then node --es-module-specifier-resolution=node server.js & node --es-module-specifier-resolution=node breestart.js else react-scripts start; fi",
+    "start-backend": "npm run build && if [ ${NODE_ENV} = \"production\" ]; then npm run start-frontend; else node --es-module-specifier-resolution=node server.js & node --es-module-specifier-resolution=node breestart.js else react-scripts start;fi",
     "start-backend-test": "npm run build-api && node --es-module-specifier-resolution=node server.js",
     "build": "react-scripts build && npm run build-api",
     "test": "react-scripts test",
